# anansi

./: .gitignore  404.html  README.md  index.html  markdown-page.html  sitemap.xml  tags.html
.github/workflows/: jekyll-gh-pages.yml
assets/css/: styles.4a6671a1.css
assets/js/: 0062d870.72533097.js  0062d870.e70ad623.js  0300a8c9.882e6351.js  05d35e2d.3336d559.js  06696d43.160e8bc3.js  06696d43.84075704.js  0e384e19.130d8b58.js  0e384e19.5239c554.js  139.f73f53d8.js  15de0c6f.66af5fa1.js  170.efb7e9fe.js  195cec1d.4dd5c9bd.js  195cec1d.616fadc5.js  1be78505.e94182f5.js  1f391b9e.a84516d7.js  319.b0a37e73.js  324c15cd.51b2d5ca.js  3720c009.1dc436f4.js  393be207.51d91d8a.js  393be207.c95b98fa.js  419.e2f84ddc.js  433.0148b214.js  4b901b1a.8059c9d1.js  4c5e977b.77bb8964.js  553.0f075e2a.js  553.3cb8d17e.js  553.3cb8d17e.js.LICENSE.txt  55960ee5.603aa343.js  55960ee5.76179a68.js  6a105426.4e4de955.js  78191b66.64d1ae7f.js  78191b66.97c1124f.js  814.10313795.js  935f2afb.7a56730d.js  935f2afb.b7a9dfbb.js  972.b379d26c.js  9dbf9d3a.8c88d410.js  9dbf9d3a.92fa64e9.js  a476e24e.95d62a08.js  df203c0f.1c653442.js  (+13 more)
core/: Cargo.toml  config.toml  rust-toolchain.toml
core/.cargo/: config
core/lib/base/: Cargo.toml
core/lib/base/src/: ann.rs  av_store.rs  diskannv1.rs  errors.rs  flat.rs  lib.rs  metric.rs  metric_aarch.rs  metric_avx.rs  metric_wasm.rs  nn_query_scratch.rs  nn_queue.rs  scalar_quantizer.rs
core/lib/base/tests/: diskannv1_test.rs
core/lib/eval/: Cargo.toml
core/lib/eval/src/: lib.rs
core/lib/wasm/: Cargo.toml
core/lib/wasm/src/: lib.rs
core/src/: main.rs
demo/: babel.config.js  index.html  index.js  package-lock.json  package.json  pkg  utils.js  wasm-workers.js  webpack.config.js
demo/clip_bpe/: mod.js
demo/functions/: fetcher.js
docs/: docusaurus.config.js  package-lock.json  package.json
docs/.github/workflows/: deploy-to-github-pages.yml
docs/docs/: intro.md
docs/docs/embedds/: _category_.json  getting-started.md  quick-evaluation.md  sidebar.js  supported-models.md
docs/docs/swagger-api/: api-encode.api.mdx  api-initialize-model.api.mdx  api.tag.mdx  embedds.info.mdx  encode-initialize.api.mdx  encode.api.mdx  index-create.api.mdx  index-deactivate.api.mdx  index-delete-data.api.mdx  index-delete.api.mdx  index-get.api.mdx  index-search.api.mdx  sidebar.js
embeddings/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  init.sh  slim.report.json
embeddings/.cargo/: config
embeddings/infra/app/: main.tf
embeddings/infra/cloud/: app.tf  main.tf
embeddings/model_transform/: environment.yml  transform.py
embeddings/proto/: api.proto
embeddings/runtime/: api.pb  config.yaml
embeddings/runtime/slim/: encode.json
embeddings/runtime/templates/: envoy-config.yaml  supervisord.conf
embeddings/src/: app_config.rs  clip.rs  embedder.rs  embedder_manager.rs  image_processor.rs  instructor.rs  lib.rs  main.rs  utils.rs
embedds/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  getting-started.html  init.sh  quick-evaluation.html  rust-toolchain  slim.report.json  supported-models.html
embedds/.cargo/: config
embedds/getting-started/: index.html
embedds/infra/cloud/: .terraform.lock.hcl  scaffolding.tf  variables.tf
embedds/infra/cloud/templates/: user_data.sh
embedds/lib/optimizer/: Cargo.toml
embedds/lib/optimizer/src/: lib.rs
embedds/lib/retrieval/: Cargo.toml
embedds/lib/retrieval/benches/: bench.rs
embedds/lib/retrieval/src/: ann.rs  av_store.rs  diskannv1.rs  flat_full.rs  flat_lite.rs  lib.rs  metric.rs  metric_avx.rs  metric_wasm.rs  nn_queue.rs  scalar_quantizer.rs
embedds/lib/retrieval/src/manager/: index_manager.rs  mod.rs
embedds/lib/retrieval/src/utils/: mod.rs  sift.rs
embedds/lib/retrieval/src/vamana/: math_utils.rs  mod.rs  pq.rs  pq_chunk_table.rs  pq_flash_index.rs  reader.rs  scratch.rs  utils.rs
embedds/lib/retrieval/tests/: diskann.rs  diskannv1_test.rs
embedds/model_transform/: transform.py
embedds/proto/: api.proto  buf.gen.yaml
embedds/proto/swagger/: api.swagger.json  api.swagger.yaml
embedds/quick-evaluation/: index.html
embedds/runtime/: api.pb  config.yaml  envoy-config.yaml  supervisord.conf
embedds/runtime/slim/: probe.json
embedds/runtime/templates/: supervisord.conf
embedds/src/: app_config.rs  build.rs  clip.rs  embedder.rs  embedder_manager.rs  instructor.rs  lib.rs  main.rs  utils.rs
embedds/src/embedd/: clip.rs  clip_models.rs  e5.rs  embedder.rs  embedder_manager.rs  image_processor.rs  instructor.rs  mod.rs
embedds/src/manager/: doc_store.rs  example.json  json_manager.rs  mod.rs  utils.rs
embedds/supported-models/: index.html
markdown-page/: index.html
misc/: transform.py
swagger-api/: api-encode.html  api-initialize-model.html  api.html  embedds.html
swagger-api/api/: index.html
swagger-api/api-encode/: index.html
swagger-api/api-initialize-model/: index.html
swagger-api/embedds/: index.html
tags/: documentation.html  getting-started.html  index.html  quickstart.html
tags/documentation/: index.html
tags/getting-started/: index.html
tags/quickstart/: index.html
utils/container-infra/: Dockerfile
utils/model_transform/: README.md  e5.py  environment.yml  transform.py  tune.py
