[package]
name = "anansi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "lib/base" }
crossbeam-channel = "0.5.7"
log = "0.4.17"
math = "0.10.0"
num = "0.4.0"
parking_lot = { version = "0.12.1", features = ["nightly"] }
rayon = "1.6.1"
roaring = "0.10.1"
serde = "1.0.152"
sorted-vec = "0.8.2"
wasm-bindgen-test = "0.3.34"

[workspace]
members = ["lib/*"]
