[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "managed-server"
path = "src/main.rs"


[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
pyo3 = { version = "0.18.2", features = ["auto-initialize"]}
tokenizers = "0.13.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
tracing = "0.1.37"
anyhow = "1.0.70"
ndarray = "0.15.1"
ort = { version = "1.14.5", features = ["cuda"] }
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.16", features = ["blocking", "json", "stream"] }
futures = "0.3.28"
md-5 = "0.10.5"
base64ct = { version = "1.6.0", features = ["alloc"] }
base16ct = { version = "0.2.0", features = ["std"] }
tonic-reflection = "0.9.1"
parking_lot = "0.12.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.8"

[build-dependencies]
tonic-build = "0.9"
