[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"
default-run = "embedding-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "embedding-server"
path = "src/main.rs"


[dependencies]
retrieval = { path = "./lib/retrieval", features=["full"] }
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "signal"] }
pyo3 = { version = "0.18.2", features = ["auto-initialize"]}
tokenizers = "0.13.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
tracing = "0.1.37"
anyhow = "1.0.70"
ndarray = "0.15.1"
ort = { version = "1.14.5", features = ["cuda", "load-dynamic", "download-binaries"] }
phf = { version = "0.11.1", features = ["macros"] }
reqwest = { version = "0.11.16", features = ["blocking", "json", "stream"] }
futures = "0.3.28"
md-5 = "0.10.5"
base64ct = { version = "1.6.0", features = ["alloc"] }
base16ct = { version = "0.2.0", features = ["std"] }
tonic-reflection = "0.9.1"
parking_lot = "0.12.1"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.8"
rand = "0.8.5"
clap = { version = "4.2.2", features = ["derive", "cargo"] }
clap-port-flag = "0.4.0"
tokio-stream = "0.1.12"
yaml-rust = "0.4.5"
tokio-util = "0.7.7"
libvips = "1.5.1"
image = "0.24.6"
bytes = "1.4.0"
tonic-health = "0.9.2"
prost-types = "0.11.9"
serde_json = "1.0.96"
rocksdb = { version = "0.20.1" ,default-features = false, features = ["snappy"] }
rmp-serde = "1.1.1"
serde = { version = "1.0.160", features = ["derive"] }
idgenerator = "2.0.0"
nanoid = "0.4.0"
itertools = "0.10.5"


[build-dependencies]
tonic-build = "0.9"

[profile.release]
rpath = true
lto = true

[profile.dev]
lto = false

[workspace]
members = [
    "lib/retrieval",
    "lib/optimizer",
]
