[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
wasm-bindgen = "0.2.74"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
wasm-bindgen-test = "0.3.34"
