[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base = { path = "../base" }
wasm-bindgen = "0.2.74"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
wasm-bindgen-test = "0.3.34"
js-sys = "0.3.61"
byteorder = "1.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
rand = "0.8.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
