[package]
name = "retrieval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench"
harness = false

[dependencies]
log = "0.4.17"
math = "0.10.0"
parking_lot = { version = "0.12.1", features = ["nightly", "serde"] }
rayon = "1.6.1"
roaring = "0.10.1"
serde = { version = "1.0.152", features = ["derive", "rc"] }
wasm-bindgen-test = "0.3.34"
anyhow = "1.0.69"
byteorder = "1.4.3"
crossbeam-channel = "0.5.7"
rand = "0.8.5"
num = "0.4.0"
getrandom = { version = "0.2.8", features = ["js"] }
tdigest = { version = "0.2.3", features = ["use_serde"] }
rand_split = "0.2.1"
itertools = "0.10.5"
serde_json = "1.0.96"
serde_derive = "1.0.160"
rmp-serde = "1.1.1"
rocksdb = { version = "0.20.1" ,default-features = false, features = ["snappy"], optional = true }
tracing = "0.1.37"
tracing-test = "0.2.4"
tracing-subscriber = "0.3.17"
kmeans = "0.2.0"
cblas = "0.4.0"
blas-src = { version = "0.7", features = ["blis"] }
bincode = "1.3.3"
tokio-uring = "0.4.0"
futures = "0.3.28"
tokio = "1.28.1"
scopeguard = "1.1.0"

[features]
default = []
full = ["dep:rocksdb"]

[dev-dependencies]
bencher = "0.1.5"
criterion = "0.4.0"
